@@ -62,10 +62,15 @@
       - [X] a pkg-config script for each is generated
 - [X] create README files for subdirs
 **** TODO Create unit tests for 'functions.pm'
+     CLOCK: [2012-04-25 mer. 15:56]--[2012-04-25 mer. 16:38] =>  0:42
      CLOCK: [2011-07-28 jeu. 17:20]--[2011-07-28 jeu. 17:37] =>  0:17
      CLOCK: [2011-07-28 jeu. 11:59]--[2011-07-28 jeu. 12:27] =>  0:28
-- [ ] Add it to the `make check` rule
-- [ ] UT-needed xml files go in src/xml/
+- [X] Add it to the `make check` rule
+- [X] Add needed perl module to DEPENDENCIES
+- [ ] UT-needed xml files go in src/xml/ if big files
+      otherwise, if a $node is needed in tested function
+      we can use 'XML::LibXML->load_xml(string =>)'
+      - [ ] Write unit tests for existing function of functions.pm
 **** Complete XML file in src/xml/ and printing with foswiki's macros
 - [X] add ruleset-id
 - [ ] Add an 'hardwareDescription' field for the server
