@@ -12,4 +12,5 @@ Should use REST : see the 'restExample($session)' function
    Please update GNU ChangeLog
 
 * v0.0.0-3 (04 mar 2012 - ???) SLOC ??? UT ?? FT ??:??
+- 2 unit tests for getNodeContent() implemented.
 - Create pkg-config autoconf's input files for libclient and libserver
